Backend refactor & Github actions (#2)